# cmake-cpp-seed

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: CodeCoverage.cmake  CodeCoverageNew.cmake  CreateArchLinuxPackage.cmake
include/calc/: calculator.hpp  version.hpp.in
src/: CMakeLists.txt
src/calc/: CMakeLists.txt  calculator.cpp
test/: CMakeLists.txt  test_calc.cpp
